--- a/package.json
+++ b/package.json
@@ -50,11 +50,10 @@
     "typescript": "^3.9.3",
     "vue": "^2.6.11",
     "vxe-table": "^2.9.14",
-    "xe-utils": "^2.5.0"
+    "xe-utils": "^2.6.2"
   },
   "peerDependencies": {
-    "vxe-table": ">= 2.9.14 < 3",
-    "xe-utils": ">= 2.4.0 < 3"
+    "vxe-table": ">= 2.9.14 < 3"
   },
   "repository": {
     "type": "git",
