--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vxe-table-plugin-virtual-tree",
   "version": "0.4.1",
-  "description": "基于 vxe-table 表格的增强插件，实现简单的虚拟树表格",
+  "description": "基于 vxe-table 表格的增强插件，实现简单的虚拟树表格（属于内测阶段）",
   "scripts": {
     "lib": "gulp build"
   },
@@ -49,8 +49,8 @@
     "prettier": "^1.18.2",
     "typescript": "^3.9.3",
     "vue": "^2.6.11",
-    "vxe-table": "^2.9.18",
-    "xe-utils": "^2.7.8"
+    "vxe-table": "^2.9.19",
+    "xe-utils": "^2.7.9"
   },
   "peerDependencies": {
     "vxe-table": ">= 2.9.20 < 3"
