--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vxe-table-plugin-virtual-tree",
-  "version": "0.5.0",
+  "version": "0.5.4",
   "description": "基于 vxe-table 表格的增强插件，实现简单的虚拟树表格（属于内测阶段）",
   "scripts": {
     "lib": "gulp build"
@@ -11,10 +11,10 @@
     "*.d.ts",
     "style.scss"
   ],
-  "main": "dist/vxe-table-plugin-virtual-tree.common.js",
-  "style": "dist/vxe-table-plugin-virtual-tree.min.css",
-  "unpkg": "dist/vxe-table-plugin-virtual-tree.min.js",
-  "jsdelivr": "dist/vxe-table-plugin-virtual-tree.min.js",
+  "main": "dist/index.common.js",
+  "unpkg": "dist/index.umd.min.js",
+  "jsdelivr": "dist/index.umd.min.js",
+  "style": "dist/style.min.css",
   "typings": "index.ts",
   "devDependencies": {
     "@babel/core": "^7.4.4",
@@ -49,8 +49,8 @@
     "prettier": "^1.18.2",
     "typescript": "^3.9.3",
     "vue": "^2.6.11",
-    "vxe-table": "^2.9.20",
-    "xe-utils": "^2.7.10"
+    "vxe-table": "^2.9.21",
+    "xe-utils": "^2.7.11"
   },
   "peerDependencies": {
     "vxe-table": ">= 2.9.20 < 3"
