--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vxe-table-plugin-virtual-tree",
   "version": "0.5.4",
-  "description": "基于 vxe-table 表格的增强插件，实现简单的虚拟树表格（属于内测阶段）",
+  "description": "基于 vxe-table 的表格插件，实现简单的虚拟树表格（属于内测阶段）",
   "scripts": {
     "lib": "gulp build"
   },
