--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vxe-table-plugin-virtual-tree",
-  "version": "0.5.9",
+  "version": "0.5.10",
   "description": "基于 vxe-table 的表格插件，实现简单的虚拟树表格（属于内测阶段）",
   "scripts": {
     "lib": "gulp build"
@@ -50,10 +50,10 @@
     "typescript": "^4.0.5",
     "vue": "^2.6.12",
     "vxe-table": "^2.10.0",
-    "xe-utils": "^3.0.1"
+    "xe-utils": "^3.1.8"
   },
   "peerDependencies": {
-    "vxe-table": ">= 2.9"
+    "vxe-table": "^2.10.0"
   },
   "repository": {
     "type": "git",
