--- a/package.json
+++ b/package.json
@@ -49,11 +49,11 @@
     "prettier": "^2.1.2",
     "typescript": "^4.0.5",
     "vue": "^3.0.2",
-    "vxe-table": "^4.0.0-beta.0",
-    "xe-utils": "^3.0.1"
+    "vxe-table": "^4.0.3",
+    "xe-utils": "^3.3.0"
   },
   "peerDependencies": {
-    "vxe-table": ">= 4"
+    "vxe-table": "^4.0.0"
   },
   "repository": {
     "type": "git",
