--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -6,3 +6,5 @@ body:
   attributes:
     value: "Thanks for taking the time to fill out this bug! If you need real-time help, join us on Discord."
 - type: markdown
+  attributes:
+    value: "This is working now!"
