--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -1,10 +1,5 @@
-name: Bug Report
-description: Create a bug report for the Next.js core
-labels: 'template: bug'
+name: "Bug report"
 body:
 - type: markdown
   attributes:
-    value: "Thanks for taking the time to fill out this bug! If you need real-time help, join us on Discord."
-- type: markdown
-  attributes:
-    value: "This is working now!"
+    value: "Bugs are a bummer!"
