--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -1,7 +1,7 @@
-name: "bug213123"
-about: "dfg 12323"
-title: "fhgfhgfh"
-labels: "bug"
+name: bug213123
+about: dfg 12323
+title: fhgfhgfh
+labels: bug
 body:
 - type: markdown
   attributes:
