--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -6,6 +6,17 @@ body:
 - type: markdown
   attributes:
     value: "Bugs are a bummer!"
+    description: 'sdfsdfdsf dsg'
 - type: textarea
   attributes:
     label: "What's wrong?"
+    description: 'For example: 10.0.1'
+   validations:
+     required: true
+- type: input
+  attributes:
+    label: What version of Next.js are you using?
+    description: 'For example: 10.0.1'
+  validations:
+    required: true
+  
