--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -3,9 +3,15 @@ description: sdfdsfdsf
 title: fhgfhgfh
 labels: bug
 body:
+- type: input
+  attributes:
+    label: Last name
 - type: textarea
   attributes:
     label: "What's wrong?"
 - type: markdown
   attributes:
     value: "Bugs are a bummer!"
+- type: input
+  attributes:
+    label: Last name
