--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -11,5 +11,5 @@ body:
     label: "What's wrong?"
 - type: markdown
   attributes:
-    value: "Bugs are a bummer!"
+    label: "Bugs are a bummer!"
  
