--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -5,13 +5,22 @@ labels: bug
 body:
 - type: input
   attributes:
-    label: Last name
-- type: textarea
-  attributes:
-    label: "What's wrong?"
-    description: "How do you trigger this bug? Please walk us through it step by step."
-    value: "dsf"
+    label: 请填在线链接
 - type: markdown
   attributes:
-    value: "Bugs are a bummer!"
- 
+    value: 请填写问题描述或截图
+- type: markdown
+  attributes:
+    value: 请填写期望的结果
+- type: input
+  attributes:
+    label: OS
+- type: input
+  attributes:
+    label: Browser
+- type: input
+  attributes:
+    label: vue
+- type: input
+  attributes:
+    label: vxe-table
