--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -9,6 +9,6 @@ body:
 - type: markdown
   attributes:
     value: "请填写问题描述或截图"
-- type: markdown
+- type: textarea
   attributes:
-    value: "请填写期望的结果"
+    label: "What's wrong?"
