--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -5,7 +5,9 @@ labels: bug
 body:
 - type: input
   attributes:
-    label: "请填在线链接"
+    label: 请填在线链接
+  validations:
+    required: true
 - type: markdown
   attributes:
     value: "请填写问题描述或截图"
