--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -3,7 +3,14 @@ description: sdfdsfdsf
 title: fhgfhgfh
 labels: bug
 body:
-
+- type: input
+  id: prevalence
+  attributes:
+    label: Bug prevalence
+    description: "How often do you or others encounter this bug?"
+    placeholder: "Whenever I visit the user account page (1-2 times a week)"
+  validations:
+    required: true
 - type: markdown
   attributes:
     value: "请填写问题描述或截图"
