--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -6,7 +6,7 @@ body:
 - type: input
   id: prevalence
   attributes:
-    label: Bug prevalence
+    label: 请填在线链接
     description: "How often do you or others encounter this bug?"
     placeholder: "Whenever I visit the user account page (1-2 times a week)"
   validations:
