--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -6,14 +6,14 @@ body:
 - type: input
   id: prevalence
   attributes:
-    label: 请填在线链接：
+    label: 可复现的演示链接：
     description: "重现必须是可运行的，尽量精简可复现问题的代码段，一个最小化的重现能让我们精确地定位 bug 从而快速解决问题！"
     placeholder: "请输入有效在线演示链接"
   validations:
     required: true
 - type: markdown
   attributes:
-    value: "请填写问题描述或截图"
+    value: "问题描述与相关截图"
 - type: textarea
   attributes:
     label: "What's wrong?"
