--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -14,6 +14,7 @@ body:
 - type: textarea
   attributes:
     label: "可复现演示链d接："
+    description: "fdg"
 - type: markdown
   attributes:
     value: "其他"
