--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -13,7 +13,7 @@ body:
     required: true
 - type: textarea
   attributes:
-    label: "可复现演示链d接："
+    label: "问题描述或相关截图："
     description: "fdg"
 - type: markdown
   attributes:
