--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -12,6 +12,7 @@ body:
   validations:
     required: true
 - type: textarea
+  id: describe
   attributes:
     label: "问题描述或相关截图："
     description: "fdg"
