--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -3,19 +3,17 @@ description: sdfdsfdsf
 title: fhgfhgfh
 labels: bug
 body:
+- type: textarea
+  id: describe
+  attributes:
+    label: "问题描述或相关截图："
+    description: "请将详细操作步骤描述清楚"
+- type: markdown
 - type: input
-  id: prevalence
+  id: link
   attributes:
     label: "可复现的演示链接："
     description: "重现必须是可运行的，尽量精简可复现问题的代码段，一个最小化的重现能让我们精确地定位 bug 从而快速解决问题！"
     placeholder: "请输入有效在线演示链接"
   validations:
     required: true
-- type: textarea
-  id: describe
-  attributes:
-    label: "问题描述或相关截图："
-    description: "fdg"
-- type: markdown
-  attributes:
-    value: "其他"
