--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -9,6 +9,8 @@ body:
     label: "问题描述或相关截图："
     description: "请将详细操作步骤描述清楚"
 - type: markdown
+  attributes:
+    label: "问题描述或相关截图："
 - type: input
   id: link
   attributes:
