--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -9,7 +9,9 @@ body:
     label: "问题描述或相关截图："
     description: "详细操作步骤描述"
 - type: markdown
-   value: "gh"
+  attributes:
+    value: |
+      Thanks for taking the time to fill out this bug report!
 - type: input
   id: link
   attributes:
