--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -20,3 +20,7 @@ body:
     placeholder: "请输入有效在线演示链接"
   validations:
     required: true
+- type: input
+  id: link
+  attributes:
+    label: "期望的结果："
