--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -3,10 +3,6 @@ description: sdfdsfdsf
 title: fhgfhgfh
 labels: bug
 body:
-- type: markdown
-  attributes:
-    value: |
-      Thanks for taking the time to fill out this bug report!
 - type: textarea
   id: issue_describe
   attributes:
@@ -14,6 +10,9 @@ body:
     description: "详细操作步骤描述"
   validations:
     required: true
+- type: markdown
+  attributes:
+    value: "在发布问题之前，仔细阅读你已经写下来的步骤，以确保提供的步骤是详细和清晰的。"
 - type: input
   id: issue_link
   attributes:
