--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -17,8 +17,7 @@ body:
   id: issue_link
   attributes:
     label: "可复现的演示链接："
-    description: "重现必须是可运行的，尽量精简可复现问题的代码段，一个最小化的重现能让我们精确地定位 bug 从而快速解决问题！"
-    placeholder: "请输入有效在线演示链接"
+    placeholder: "重现必须是可运行的，一个最小化的重现能让我们精确地定位 bug 从而快速解决问题"
   validations:
     required: true
 - type: input
