--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -16,7 +16,7 @@ body:
 - type: input
   id: issue_link
   attributes:
-    label: "可复现的演示链接："
+    label: "可复现的链接："
     placeholder: "一个最小化的重现能让我们精确地定位 bug 从而快速解决问题"
   validations:
     required: true
