--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -7,7 +7,7 @@ body:
   id: issue_link
   attributes:
     label: "可复现的链接："
-    description: "```详细操作步骤描述 [sdf](https://dsf)``` [sdf](https://dsf)"
+    description: "如何创建在线链接，点击 (codesandbox)[https://codesandbox.io/s/vue-template-916h0] 或 (jsrun)[https://jsrun.net/vIyKp/edit] ，然后 fork"
     placeholder: "一个最小化的重现能让我们精确地定位 bug 从而快速解决问题"
   validations:
     required: true
