--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -6,7 +6,7 @@ body:
   id: issue_link
   attributes:
     label: "可复现的链接："
-    description: "如何创建在线链接，点击 v3：[codesandbox](https://codesandbox.io/s/vue-template-916h0)、[jsrun](https://jsrun.net/vIyKp/edit) 或 v4：[codesandbox](https://codesandbox.io/s/vxe-table-wentiyanshi-forked-54v2j)、[jsrun](https://jsrun.net/K5IKp/edit)，然后 fork"
+    description: "如何创建在线链接，点击 v3：[codesandbox](https://codesandbox.io/s/vue-template-916h0)、[jsrun](https://jsrun.net/vIyKp/edit) 或 v4：[codesandbox](https://codesandbox.io/s/vxe-table-wentiyanshi-forked-54v2j)、[jsrun](https://jsrun.net/K5IKp/edit)，然后 fork。"
     placeholder: "一个最小化的重现能让我们精确地定位问题，从而快速解决问题"
   validations:
     required: true
@@ -18,7 +18,7 @@ body:
     required: true
 - type: markdown
   attributes:
-    value: "在发布问题之前，请仔细阅读所填写的步骤，以确保是详细和清晰的"
+    value: "在发布问题之前，请仔细阅读所填写的步骤，以确保是详细和清晰的。"
 - type: input
   id: issue_expect_version
   attributes:
