--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -19,7 +19,7 @@ body:
   attributes:
     value: "在发布问题之前，请仔细阅读所填写的步骤，以确保是详细和清晰的。"
 - type: input
-  id: issue_expect_version
+  id: issue_expect
   attributes:
     label: "期望的结果："
 - type: input
@@ -30,21 +30,21 @@ body:
   validations:
     required: true
 - type: input
-  id: issue_vue_version
+  id: issue_browser_version
   attributes:
     label: "浏览器版本："
     placeholder: "例如：chrome 95.0.4638.69"
   validations:
     required: true
 - type: input
-  id: issue_vxe_version
+  id: issue_vue_version
   attributes:
     label: "vue 版本："
     placeholder: "例如：2.6.0"
   validations:
     required: true
 - type: input
-  id: browser
+  id: issue_vxe_version
   attributes:
     label: "vxe-table 版本："
     placeholder: "例如：3.4.0"
