--- a/.github/ISSUE_TEMPLATE/a.yml
+++ b/.github/ISSUE_TEMPLATE/a.yml
@@ -12,14 +12,14 @@ body:
   attributes:
     value: "请先查看最新文档，确定该功能是否已有实现"
 - type: textarea
-  id: issue_describe
+  id: issue_api_describe
   attributes:
     label: "建议的 API 是什么样的："
 - type: markdown
   attributes:
     value: "描述一下希望该功能如何调用"
 - type: textarea
-  id: issue_describe
+  id: issue_alternative_solution
   attributes:
     label: "是否已有其他不错的替代方案："
 - type: markdown
