--- a/.github/ISSUE_TEMPLATE/feature.yml
+++ b/.github/ISSUE_TEMPLATE/feature.yml
@@ -10,7 +10,7 @@ body:
     required: true
 - type: markdown
   attributes:
-    value: "请先查看最新文档，确定该功能是否已有实现"
+    value: "请先查看[最新文档](https://xuliangzhan_admin.gitee.io/vxe-table/#/table/api)，确定该功能是否已有实现"
 - type: textarea
   id: issue_api_describe
   attributes:
